# wtftoday.dev

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: brief.rs  calendar.rs  github.rs  mod.rs  settings.rs
src-tauri/src/database/: repository.rs  schema.rs
src-tauri/src/models/: brief.rs  calendar.rs  email.rs  github.rs  mod.rs  settings.rs
src-tauri/src/services/: calendar_service.rs  credentials.rs  github_service.rs  mod.rs
src/components/layout/: AppShell.tsx  Footer.tsx  Header.tsx
src/components/sections/: CalendarSection.tsx  EmailSection.tsx  GitHubSection.tsx  index.ts
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  LoadingSpinner.tsx  Section.tsx  index.ts
src/pages/: DailyBrief.tsx  Settings.tsx
src/pages/Onboarding/: CalendarStep.tsx  CompleteStep.tsx  GitHubStep.tsx  WelcomeStep.tsx  index.tsx
src/store/: briefStore.ts  index.ts  settingsStore.ts
src/types/: brief.ts  calendar.ts  email.ts  github.ts  index.ts  settings.ts
